--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_LOG_LEVEL=debug
 APP_URL=https://openai-app.test
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=openai_app
-DB_USERNAME=root
-DB_PASSWORD="password"
+DB_USERNAME=magicai
+DB_PASSWORD=password
 
 GOOGLE_APPLICATION_CREDENTIALS=careful-sphinx-390312-5f3fa16eca50.json
 GOOGLE_CLOUD_PROJECT=careful-sphinx-390312
